[package]
name = "syncer"
version = "0.1.0"
edition = "2024"
default-run = "server"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
blake3 = "1.5.5"
futures = "0.3.31"
log = "0.4.22"
netdev = "0.31.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "io-util",
    "sync",
] }
