[package]
name = "syncer"
version = "1.7.2"
edition = "2024"
default-run = "server"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
blake3 = "1.5.5"
crc32fast = "1.4.2"
futures = "0.3.31"
log = "0.4.22"
netdev = "0.31.0"
pretty_env_logger = "0.5.0"
tokio = { version = "1.42.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "net",
    "io-util",
    "sync",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.171"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["wincon", "processenv", "winbase"] }
